--- a/sass/components/_menu.scss
+++ b/sass/components/_menu.scss
@@ -114,6 +114,10 @@
     padding-top: 50px;
   }
 
+  .mobile-link--underline {
+    color: #2196f3;
+  }
+
   .menu-wrap {
     display: flex;
     flex-direction: column;
