--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -14,7 +14,7 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 100%;
+    max-width: 100%;
     height: 681px;
     background-color: #ffffff;
   }
@@ -34,6 +34,7 @@
       -webkit-box-shadow: 1px 1px 8px 4px rgba(77, 76, 76, 0.07);
       -moz-box-shadow: 1px 1px 8px 4px rgba(77, 76, 76, 0.07);
       transition: cubic-bezier(0.4, 0, 0.2, 1);
+      color: #2196f3;
     }
   }
 
@@ -85,7 +86,7 @@
   }
 
   .modal-order__comment {
-    width: 430px;
+    width: 510px;
     font-size: 12px;
     padding-top: 14px;
     padding-bottom: 14px;
