--- a/sass/components/_pagefooter.scss
+++ b/sass/components/_pagefooter.scss
@@ -10,26 +10,23 @@
     width: 100%;
   }
 
-  .footer__container {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+  // .footer__container {
+  //   display: flex;
+  //   flex-direction: column;
+  //   justify-content: center;
+  //   align-items: center;
 
-    padding-left: 15px;
-    padding-right: 15px;
-  }
+  //   padding-left: 15px;
+  //   padding-right: 15px;
+  // }
 
   .footer__address {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+
     align-items: center;
     padding-top: 60px;
     padding-bottom: 0px;
-
-    padding-left: 15px;
-    padding-right: 15px;
   }
 
   .footer__logo {
@@ -50,6 +47,7 @@
     align-items: center;
 
     margin-top: 40px;
+    margin-bottom: 20px;
   }
 
   .footer__icon-box {
@@ -86,15 +84,6 @@
     color: #ffffff;
   }
 
-  .footer__form-newsletter {
-    display: flex;
-    width: 450px;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    padding-top: 60px;
-    margin: 0px;
-  }
   .form-newsletter__paragraf {
     text-transform: uppercase;
     font-family: var(--main-font);
@@ -102,21 +91,21 @@
     font-weight: 400;
     font-size: 14px;
     line-height: 1.71;
-    /* or 171% */
+    display: flex;
+    justify-content: center;
     letter-spacing: 0.03em;
     margin: 0px;
-    padding-bottom: 20px;
-
+    padding-bottom: 10px;
     color: #ffffff;
     text-align: start;
-    padding-bottom: 0px;
   }
   .form-newsletter__box {
     display: flex;
+
+    flex-direction: column;
+    align-items: center;
     justify-content: center;
 
-    flex-wrap: wrap;
-    margin: 0px;
     padding-top: 20px;
     padding-bottom: 30px;
   }
@@ -136,8 +125,8 @@
   }
   .form-newsletter__input {
     background-color: transparent;
-    height: 50px;
-    width: 450px;
+    max-width: 100%;
+    min-height: 50px;
     border-radius: 6px;
     margin: 0;
     border-color: #757575;
@@ -153,6 +142,19 @@
       transition: cubic-bezier(0.4, 0, 0.2, 1);
       outline: none;
     }
+  }
+  .order-form {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
+    padding: 20px;
+  }
+
+  .button-newsletter {
+    display: flex;
+    justify-content: center;
+    padding-bottom: 60px;
   }
 
   .button--newsletter {
@@ -238,6 +240,18 @@
 
     letter-spacing: 1.19;
   }
+
+  .adress-paragraf {
+    font-family: var(--main-font);
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 1.71;
+
+    letter-spacing: 0.03em;
+
+    color: #ffffff;
+  }
 }
 
 @media screen and (min-width: 768px) and (max-width: 1199px) {
@@ -247,16 +261,24 @@
     display: flex;
     align-items: center;
     justify-content: center;
-
+    max-width: 100%;
     padding-bottom: 60px;
   }
 
-  .footer__container {
+  // .footer__container {
+  //   display: flex;
+  //   flex-wrap: wrap;
+  //   justify-content: center;
+  // }
+  .footer-wrapper {
     display: flex;
-    flex-wrap: wrap;
+    flex-direction: column;
     justify-content: center;
   }
-
+  .footer-box {
+    display: flex;
+    flex-wrap: wrap;
+  }
   .footer__address {
     display: flex;
     flex-direction: column;
@@ -280,11 +302,12 @@
     display: flex;
     flex-direction: column;
     margin: 50px;
+    padding-top: 5px;
     align-items: center;
   }
 
   .footer__icon-box {
-    margin: 20px;
+    padding: 20px;
   }
 
   .socials__icons--footer {
@@ -375,7 +398,7 @@
     justify-content: center;
     align-items: center;
     text-decoration: none;
-    margin-top: 30px;
+    margin-top: 10px;
     height: 50px;
     width: 200px;
 
@@ -445,6 +468,31 @@
 
     letter-spacing: 1.19;
   }
+
+  .order-form {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
+    padding: 20px;
+  }
+
+  .button-newsletter {
+    display: flex;
+    justify-content: center;
+    padding-bottom: 60px;
+  }
+  .adress-paragraf {
+    font-family: var(--main-font);
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 1.71;
+
+    letter-spacing: 0.03em;
+
+    color: #ffffff;
+  }
 }
 
 @media screen and (min-width: 1200px) {
@@ -463,6 +511,14 @@
     display: flex;
     justify-content: space-between;
     width: 1200px;
+  }
+  .footer-wrapper {
+    display: flex;
+    justify-content: space-around;
+  }
+  .footer-box {
+    display: flex;
+    flex-wrap: wrap;
   }
 
   .footer__address {
@@ -485,9 +541,10 @@
   .footer__socialmedia {
     display: flex;
     flex-direction: column;
-    padding-top: 60px;
+    padding-top: 70px;
+    padding-bottom: 60px;
     align-items: flex-start;
-    margin-left: 40px;
+    padding-left: 80px;
   }
 
   .footer__icon-box {
@@ -497,7 +554,17 @@
     padding-right: 0px;
     padding: 0;
   }
+  .adress-paragraf {
+    font-family: var(--main-font);
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 1.71;
 
+    letter-spacing: 0.03em;
+
+    color: #ffffff;
+  }
   .socials__icons--footer {
     margin-right: 10px;
     fill: #ffffff;
@@ -584,6 +651,13 @@
     }
   }
 
+  .button-newsletter {
+    display: flex;
+    justify-content: flex-start;
+    padding-bottom: 60px;
+    padding-top: 107px;
+  }
+
   .button--newsletter {
     margin-left: 12px;
     letter-spacing: 0.03em;
@@ -663,5 +737,11 @@
     line-height: 31px;
 
     letter-spacing: 1.19;
+  }
+  .order-form {
+    display: flex;
+    flex-direction: column;
+    padding-top: 70px;
+    padding-left: 50px;
   }
 }
