--- a/sass/components/_pageheader.scss
+++ b/sass/components/_pageheader.scss
@@ -1,7 +1,6 @@
 @media screen and (min-width: 320px) and (max-width: 767px) {
   .header {
     width: 100%;
-
   }
 
   .header__menu {
@@ -135,7 +134,7 @@
   }
 
   .header__menu {
-    width: 768px;
+    width: 100%;
 
     font-style: normal;
     font-weight: 700;
@@ -255,14 +254,8 @@
 }
 
 @media screen and (min-width: 1200px) {
-  .wrapper {
-    min-width: 1200px;
-
-    display: flex;
-
-    justify-content: space-between;
-  }
   .header {
+    width: 100%;
     display: flex;
     flex-wrap: wrap;
     align-items: center;
@@ -274,7 +267,7 @@
   }
 
   .header__menu {
-    width: 1200px;
+    width: 100%;
     font-style: normal;
     font-weight: 700;
     font-size: 14px;
