--- a/sass/components/_nav.scss
+++ b/sass/components/_nav.scss
@@ -51,10 +51,16 @@
 }
 @media screen and (min-width: 768px) and (max-width: 1199px) {
   .nav__box {
-    max-width: 270px;
-    display: inline-block;
+    max-width: 100%;
+    display: inline-flex;
+    justify-content: center;
   }
 
+  .nav {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+  }
   .nav__link {
     color: #000000;
     text-decoration: none;
@@ -93,10 +99,11 @@
 }
 @media screen and (min-width: 1200px) {
   .nav__box {
-    max-width: 270px;
+    max-width: 100%;
     display: inline-block;
 
     padding-right: 0px;
+
     margin: 0px;
     padding: 0;
   }
@@ -137,6 +144,8 @@
     }
   }
   .nav {
+    width: 100%;
     margin-right: 300px;
+    margin-left: 100px;
   }
 }
