--- a/sass/components/_order.scss
+++ b/sass/components/_order.scss
@@ -3,7 +3,7 @@
     // background-color: #2f303a;
     color: #ffffff;
     width: 100%;
-
+    height: auto;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -42,32 +42,36 @@
   .order {
     // background-color: #2f303a;
     color: #ffffff;
+    width: 100%;
+    height: auto;
     // padding-top: 118px;
     // padding-bottom: 118px;
     display: flex;
     align-items: center;
     justify-content: center;
     border-top: 1px solid #ececec;
-  }
-
-  .order__container {
-    min-width: 768px;
-    height: 400px;
-    color: #ffffff;
     background-image: linear-gradient(
         to top,
         rgba(0, 18, 105, 0) 0%,
         rgba(47, 48, 58, 0.4) 100%
       ),
-      url("../images/tm-tablet2.jpg");
-    background-size: contain;
+      url("../images/team.jpg");
+    background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+
+    .order__container {
+      max-width: 100%;
+      height: 400px;
+      color: #ffffff;
+
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+    }
   }
+
   .order__header {
     display: flex;
     justify-content: center;
@@ -93,7 +97,8 @@
   .order {
     // background-color: #2f303a;
     color: #ffffff;
-    min-width: 1200px;
+    max-width: 100%;
+    height: auto;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -108,7 +113,6 @@
 
     background-position: center;
     .order__container {
-      min-width: 1200px;
       height: 600px;
       color: #ffffff;
 
