--- a/sass/components/_pagefooter.scss
+++ b/sass/components/_pagefooter.scss
@@ -274,6 +274,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: center;
   }
   .footer-box {
     display: flex;
@@ -509,18 +510,20 @@
 
   .footer__container {
     display: flex;
-    justify-content: space-between;
-    width: 1200px;
+    justify-content: space-evenly;
+    width: 100%;
   }
   .footer-wrapper {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
   }
   .footer-box {
     display: flex;
     flex-wrap: wrap;
   }
-
+  .form-box {
+    display: flex;
+  }
   .footer__address {
     display: flex;
     flex-direction: column;
