--- a/sass/components/_pagesectionarticle.scss
+++ b/sass/components/_pagesectionarticle.scss
@@ -66,6 +66,7 @@
 
 @media screen and (min-width: 768px) and (max-width: 1199px) {
   .article {
+    width: 100%;
     color: #ffffff;
     display: flex;
     justify-content: center;
@@ -74,12 +75,13 @@
     // background-color: aquamarine;
   }
 
-  // .article__container {
-  //   max-width: 768px;
-  //   margin: 0 auto;
-  //   padding: 30px 15px;
-  //   margin-top: 40px;
-  // }
+  .article__container {
+    max-width: 100%;
+    margin: 0 auto;
+    padding: 30px 15px;
+  display: flex;
+  justify-content: center;
+  }
 
   .article__description {
     /* margin: 10 15px 15px; */
