--- a/sass/components/_pagesectionteam.scss
+++ b/sass/components/_pagesectionteam.scss
@@ -94,6 +94,10 @@
     padding: 0;
     background-color: #ffffff;
   }
+  .img {
+    width: 100%;
+    height: auto;
+  }
 }
 
 @media screen and (min-width: 768px) and (max-width: 1199px) {
@@ -106,7 +110,11 @@
     padding-bottom: 94px;
   }
   .team__container {
-    width: 768px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
   }
   .team__box {
     width: 354px;
@@ -191,8 +199,8 @@
   }
 
   .img {
-    width: 354px;
-    height: 374px;
+    width: 100%;
+    height: auto;
   }
 }
 
@@ -204,11 +212,17 @@
     background-color: #f5f4fa;
     padding-top: 94px;
     padding-bottom: 94px;
+    width: 100%;
   }
   .team__container {
-    max-width: 100%;
+    width: 100%;
     display: flex;
     flex-direction: column;
+  }
+  .wrapper {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
   }
   .team__box {
     margin-bottom: 35px;
@@ -231,7 +245,7 @@
     align-items: center;
     color: #757575;
     background-color: #ffffff;
-    max-width: 270px;
+    max-width: 100%;
     padding-top: 30px;
     padding-bottom: 30px;
     line-height: 1.17;
@@ -263,8 +277,8 @@
   }
 
   .team__icons-box {
-    width: 270px;
-    height: 60px;
+    width: 100%;
+    height: auto;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -274,8 +288,8 @@
     background-color: #ffffff;
   }
   .img {
-    width: 270px;
-    height: 260px;
+    width: 100%;
+    height: auto;
   }
   .section__paragraf {
     max-width: 100%;
