--- a/sass/components/_pagesectionwhatwedo.scss
+++ b/sass/components/_pagesectionwhatwedo.scss
@@ -8,6 +8,10 @@
     // background-color: aquamarine;
     display: none;
   }
+  .img {
+    width: 100%;
+    height: auto;
+  }
 }
 
 @media screen and (min-width: 768px) and (max-width: 1199px) {
@@ -20,10 +24,15 @@
     // background-color: aquamarine;
     display: none;
   }
+  .img {
+    width: 100%;
+    height: auto;
+  }
 }
 
 @media screen and (min-width: 1200px) {
   .whatwedo {
+    max-width: 100%;
     color: #ffffff;
     display: flex;
     justify-content: center;
@@ -65,5 +74,9 @@
   .whatwedo__figure {
     margin: 0 auto;
     background-color: #ffffff;
+  }
+  .img {
+    width: 100%;
+    height: auto;
   }
 }
