--- a/css/main.css
+++ b/css/main.css
@@ -33,6 +33,7 @@
   .container {
     margin: 0, auto;
     width: 100%;
+    max-width: 1200px;
     padding: 0 15px;
   }
 }
@@ -3021,7 +3022,6 @@
   }
   .nav {
     width: 100%;
-    margin-right: 300px;
     margin-left: 100px;
   }
 }
